@@ -1,7 +1,7 @@
 CCOW Roadmap:
 
 Stage 1 - A helper program that allows users to locate the appropriate
-classification code for a particular topic category. (First version completed Jan 28, 2012)
+classification code for a particular topic category. (First version completed Jan 28, 2012; Perl port finished Mar 15, 2103)
 
 Stage 2 - A program to faciliatate collaboration between experts in various
 fields to allow them to make suggestions for the remaining categories, vote
